--- a/for-fun/faster-than-gossip/styles.css
+++ b/for-fun/faster-than-gossip/styles.css
@@ -53,6 +53,7 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: clamp(50%,2100px,90%);
 }
 
 .menu {
@@ -77,7 +78,7 @@ main {
     border-radius: 0;
     width: 80%;
     text-align: center;
-    padding-bottom: 8px;
+    padding-bottom: 5px;
     margin: 10px 0;
 }
 
@@ -85,6 +86,8 @@ main {
     background-color: var(--background-secondary);
     color: var(--accent-1);
     text-shadow: 0 0 6px rgba(77, 240, 255, 0.2);
+    padding: 0;
+    margin: 10px 5px;
 }
 
 .options {
@@ -135,6 +138,8 @@ main {
     background-color: var(--background-secondary);
     color: var(--accent-1);
     text-shadow: 0 0 6px rgba(77, 240, 255, 0.2);
+    padding: 0;
+    margin: 10px 5px;    
 }
 
 .gameBox {
